tests/expectations/compiler/finalize/finalize_missing_return_fail.out
Error [ETYC0372106]: A final fn is not allowed to return a value.
    --> compiler-test:11:1
     |
  11 | final fn fin_mint(public receiver: address, public amount: u64) -> u64 {
     | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  12 |     Mapping::set(account, receiver, amount);
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  13 | }
     | ^
     |
     = Remove an output type in the function signature, and remove the return statement from the function. Note that the Final returned by final fn is automatically inferred, and must not be explicitly written.
Error [ETYC0372036]: Function must return a value.
    --> compiler-test:11:1
     |
  11 | final fn fin_mint(public receiver: address, public amount: u64) -> u64 {
     | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  12 |     Mapping::set(account, receiver, amount);
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  13 | }
     | ^
